<resources>
    <string name="app_name">ud809_News Feed</string>
    <string name="search_results">Results</string>
    <string name="no_results">No news feed</string>
    <string name="world_news">News</string>
    <string name="comment_is_free">Opinion</string>
    <string name="sport">Sport</string>
    <string name="culture">Culture</string>
    <string name="life_and_style">Lifestyle</string>
    <string name="source_prefix">The</string>
    <string name="source_name">Guardian</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="bad_connection">Check network connection</string>

    <!-- Settings Menu Item [CHAR LIMIT = NONE] -->
    <string name="settings_menu_item">Settings</string>
    <!-- Settings Activity Title [CHAR LIMIT = NONE] -->
    <string name="settings_title">News Feed Settings</string>

    <!-- Strings for News Feed Limit preference [CHAR LIMIT = 30] -->
    <string name="settings_feed_limit_label">News Feed Size</string>
    <string name="settings_feed_limit_key" translatable="false">feed_size</string>
    <string name="settings_feed_limit_default" translatable="false">10</string>

    <!-- Strings For Order-By Preference [char-limit = 30] -->
    <string name="settings_order_by_label"> Order By</string>
    <string name="settings_order_by_key" translatable="false">order_by</string>
    <string name="settings_order_by_default" translatable="false">@string/settings_order_by_newest_value</string>

    <!-- Label for order-by newest option [CHAR LIMIT = 20] -->
    <string name="settings_order_by_newest_label">Most Recent</string>
    <string name="settings_order_by_newest_value" translatable="false">newest</string>

    <!-- Label for oldest option [CHAR LIMIT = 20] -->
    <string name="settings_order_by_oldest_label">Oldest</string>
    <string name="settings_order_by_oldest_value" translatable="false">oldest</string>

    <!-- Label for relevance option [CHAR LIMIT = 20] -->
    <string name="settings_order_by_relevance_label">Relevance</string>
    <string name="settings_order_by_relevance_value" translatable="false">relevance</string>
</resources>
